compiler/tests/success/common/inline_label_duplication.jazz
inline fn ble::e () -> reg u32 {
    reg u32 x = 0;
    return x;
}

inline fn ble__e () -> reg u32 {
    reg u32 x = 1;
    return x;
}

export fn out() -> reg u32 {
    reg u32 x = ble::e();
    reg u32 y = ble__e();
    return y;
} 