compiler/tests/fail/register_allocation/x86-64/too_many_ret.jazz
export
fn too_many_ret() -> reg u64, reg u64, reg u64 {
  reg u64 x y z;
  x = 0;
  y = 1;
  z = 2;
  return x, y, z;
}
